# velopix

./: Cargo.toml  MANIFEST.in  README.md  lib_backup.txt  pyproject.toml
.github/workflows/: python-publish.yml
docs/: api.md  installation.md  system_overview.md
src/: lib.rs
src/algorithms/: graph_dfs.rs  search_by_triplet_trie.rs  track_following.rs
src/validator/: validator.rs
src/velopix/hyperParameterFramework/: __init__.py  event_metrics.py  optimizers.py  pipeline.py  reconstruction_algorithms.py
src/velopix/hyperParameterFramework/solvers/: Bayesian.py  GridSearch.py  ParticleSwarm.py  _PolyHoot.py
