[package]
name = "velopix"
authors = ["Sven Hockers"]
version = "0.8.1"
edition = "2021"
build = "build.rs"
license = "MIT"
repository = "https://github.com/SvenHockers/velopix"
description = "Core VeloPix Particle Track Reconstruction Algorithms"
keywords = ["rust", "python", "velopix", "CERN", "particle physics", "physics", "maturin", "lhcb", "track reconstruction","optimisation"]

[lib]
name = "velopix"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
rayon = "1.5"
ordered-float = "3.6"
itertools = "0.10.5"

[tool.maturin]
module-name = "velopix._velopix"