[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "velopix"
version = "0.8.4"
description = "CERN VeloPix Detector Framework & Hyperparameter Optimiser"
repository = "https://github.com/SvenHockers/velopix"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sven Hockers", email = "svenhockers1@gmail.com" }]

packages = [{ include = "hyperParameterFramework" }]
dependencies = [
    "numpy >= 2.0.2",
    "pandas >= 2.2.3",
    "scipy >= 1.13.1",
    "scikit-learn >= 1.6.1",
    "typing_extensions == 4.14.0"
]

[tool.maturin]
python-source = "src"

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Physics :: Elementary Particle Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Rust Modules",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
